# asset-swap

./: .envrc  .gitignore  .textlintrc.json  AGENTS.md  Cargo.toml  README.md  buf.yaml  build.rs  flake.nix  justfile  spec.md
.codex/skills/design/: SKILL.md
.codex/skills/execplan/: SKILL.md
.codex/skills/execplan/references/: PLANS.md
.codex/skills/git-commit/: SKILL.md
.codex/skills/rust/: SKILL.md
.codex/skills/spec/: SKILL.md
design/: ln_liquid_swap_minimal.md  ln_liquid_swap_production.md  lwk_liquid_regtest_integration_test.md
docs/: .vale.ini  docs.json  index.mdx
docs/getting-started/: beginner-setup.mdx
docs/protobuf/: api-design.mdx  overview.mdx  validation.mdx
docs/swap/: ln-liquid-swap.mdx  protocol-overview.mdx  rwa-issuance-and-sale.mdx
plans/: 2026-01-12_ldk-server-regtest-e2e.md  2026-01-13_ln-liquid-swap-grpc.md  2026-01-13_ln-liquid-swap-production-lite.md  2026-01-13_lwk-liquid-regtest-e2e.md  2026-01-14_ln-liquid-swap-quote.md  2026-01-15_submarine-reverse-submarine-implementation.md
proto/ln_liquid_swap/v1/: swap.proto
src/: lib.rs  proto.rs
src/lightning/: invoice.rs  ldk.rs  mod.rs
src/liquid/: htlc.rs  keys.rs  mod.rs  wallet.rs
src/swap/: mod.rs  service.rs  store.rs
tests/: ldk_server_regtest_e2e.rs  liquid_htlc_spend.rs  ln_liquid_swap_e2e.rs  lwk_liquid_regtest_e2e.rs  swap_store_sqlite.rs
tests/support/: bitcoind.rs  ldk_server.rs  lwk_env.rs  lwk_wallet.rs  mod.rs  port.rs  wait.rs
