[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.16"
bitcoincore-rpc = "0.19.0"
ldk-server-client = { git = "https://github.com/lightningdevkit/ldk-server.git", rev = "f3eaacd327d40fc8ee3fd7f6fbaccb04fa077434" }
ldk-server-protos = { git = "https://github.com/lightningdevkit/ldk-server.git", rev = "f3eaacd327d40fc8ee3fd7f6fbaccb04fa077434" }
predicates = "3.1.3"
tempfile = "3.15.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
