[package]
name = "ln-liquid-swap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bitcoin = "0.32.8"
clap = { version = "4.5.27", features = ["derive"] }
hex = "0.4.3"
ldk-server-client = { git = "https://github.com/lightningdevkit/ldk-server.git", rev = "f3eaacd327d40fc8ee3fd7f6fbaccb04fa077434" }
ldk-server-protos = { git = "https://github.com/lightningdevkit/ldk-server.git", rev = "f3eaacd327d40fc8ee3fd7f6fbaccb04fa077434" }
lightning-invoice = "0.33.2"
lwk_common = "0.13.0"
lwk_signer = "0.13.0"
lwk_wollet = "0.13.0"
prost = "0.13.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.12.3", features = ["transport"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.11.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
assert_cmd = "2.0.16"
bitcoincore-rpc = "0.19.0"
lwk_test_util = "0.13.0"
predicates = "3.1.3"
tempfile = "3.15.0"
